cracked the stream into pieces explained by good variable names and function namesl